--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -15,9 +15,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation 'org.springframework.session:spring-session-data-redis'
+
+    implementation group: 'javax.validation', name: 'validation-api', version:  '+'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
