--- a/nginx/conf.d/examples.conf
+++ b/nginx/conf.d/examples.conf
@@ -4,11 +4,15 @@ events {
 
 http {
 	server {
-		listen 80;
+		#listen 80;
+		listen 443 default ssl;
 		charset utf-8;
 
+		ssl_certificate ssl/examples-ssl.crt;
+		ssl_certificate_key ssl/examples-ssl.key;
+
 		location / {
-			proxy_pass http://localhost:8000;
+			proxy_pass https://localhost:8000;
 			proxy_set_header Host $host:$server_port;
 			proxy_set_header X-Forwarded-Host $server_name;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -16,7 +20,7 @@ http {
 		}
 
 		location /auth/ {
-			proxy_pass http://localhost:8010/;
+			proxy_pass https://localhost:8010/;
 
 			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
 			proxy_redirect / /auth;
@@ -27,7 +31,7 @@ http {
 		}
 
 		location /backend/ {
-			proxy_pass http://localhost:8030/;
+			proxy_pass https://localhost:8030/;
 
 			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
 			proxy_redirect / /backend;
@@ -38,7 +42,7 @@ http {
 		}
 
 		location /user/ {
-			proxy_pass http://localhost:8020/;
+			proxy_pass https://localhost:8020/;
 
 			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
 			proxy_redirect / /user;
