--- a/auth/src/main/resources/application.yaml
+++ b/auth/src/main/resources/application.yaml
@@ -1,9 +1,20 @@
-client.user.baseUrl: http://localhost:8020/api/user/exists
+client.user.baseUrl: https://localhost:8020/api/user/exists
 
-server.port: 8010
+security.require-ssl: true
+
+server:
+  ssl:
+    enabled: true
+    key-store: classpath:keystore/examples-ssl-key.p12
+    key-store-password: yg0r2-examples
+    key-store-type: PKCS12
+  port: 8010
 
 spring:
   cache.type: redis
   redis:
     host: localhost
     port: 6379
+
+trust.store: ${server.ssl.key-store}
+trust.store.password: ${server.ssl.key-store-password}
