--- a/nginx/conf.d/examples.conf
+++ b/nginx/conf.d/examples.conf
@@ -1,55 +1,49 @@
-events {
-    worker_connections  1024;
-}
+server {
+	#listen 80;
+	listen 443 default ssl;
+	charset utf-8;
 
-http {
-	server {
-		#listen 80;
-		listen 443 default ssl;
-		charset utf-8;
+	ssl_certificate ssl/examples-ssl.crt;
+	ssl_certificate_key ssl/examples-ssl.key;
 
-		ssl_certificate ssl/examples-ssl.crt;
-		ssl_certificate_key ssl/examples-ssl.key;
+	location / {
+		proxy_pass https://host.docker.internal:8000/;
+		proxy_set_header Host $host:$server_port;
+		proxy_set_header X-Forwarded-Host $server_name;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
 
-		location / {
-			proxy_pass https://localhost:8000;
-			proxy_set_header Host $host:$server_port;
-			proxy_set_header X-Forwarded-Host $server_name;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		}
+	location /auth/ {
+		proxy_pass https://host.docker.internal:8010/;
 
-		location /auth/ {
-			proxy_pass https://localhost:8010/;
+		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+		proxy_redirect / /auth;
 
-			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-			proxy_redirect / /auth;
+		sub_filter 'action="/' 'action="/auth/'; # currently for form submit
+		sub_filter 'href="/' 'href="/auth/';
+		sub_filter_once off;
+	}
 
-			sub_filter 'action="/' 'action="/auth/'; # currently for form submit
-			sub_filter 'href="/' 'href="/auth/';
-			sub_filter_once off;
-		}
+	location /backend/ {
+		proxy_pass https://host.docker.internal:8030/;
 
-		location /backend/ {
-			proxy_pass https://localhost:8030/;
+		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+		proxy_redirect / /backend;
 
-			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-			proxy_redirect / /backend;
+		sub_filter 'action="/' 'action="/backend/'; # currently for form submit
+		sub_filter 'href="/' 'href="/backend/';
+		sub_filter_once off;
+	}
 
-			sub_filter 'action="/' 'action="/backend/'; # currently for form submit
-			sub_filter 'href="/' 'href="/backend/';
-			sub_filter_once off;
-		}
+	location /user/ {
+		proxy_pass https://host.docker.internal:8020/;
 
-		location /user/ {
-			proxy_pass https://localhost:8020/;
+		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+		proxy_redirect / /user;
 
-			#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-			proxy_redirect / /user;
-
-			sub_filter 'action="/' 'action="/user/'; # currently for form submit
-			sub_filter 'href="/' 'href="/user/';
-			sub_filter_once off;
-		}
+		sub_filter 'action="/' 'action="/user/'; # currently for form submit
+		sub_filter 'href="/' 'href="/user/';
+		sub_filter_once off;
 	}
 }
