--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -1,1 +1,13 @@
+pluginManagement {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = 'backend'
+
+include 'api'
+include 'service'
+include 'web'
