--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
 #    env_file:
 #      - ssl-config.env
     image: auth:0.0.1-SNAPSHOT
+    networks:
+      - example-network
     ports:
       - 8010:8010
     volumes:
@@ -27,6 +29,8 @@ services:
 #    env_file:
 #      - ssl-config.env
     image: backend:0.0.1-SNAPSHOT
+    networks:
+      - example-network
     ports:
       - 8030:8030
     volumes:
@@ -41,6 +45,8 @@ services:
 #    env_file:
 #      - ssl-config.env
     image: layout:0.0.1-SNAPSHOT
+    networks:
+      - example-network
     ports:
       - 8000:8000
     volumes:
@@ -49,6 +55,8 @@ services:
   nginx:
     container_name: nginx
     image: nginx:alpine
+    networks:
+      - example-network
     ports:
 #      - 80:80
       - 443:443
@@ -64,6 +72,8 @@ services:
   redis:
     container_name: redis
     image: redis:alpine
+    networks:
+      - example-network
     ports:
       - 6379:6379
 
@@ -76,6 +86,8 @@ services:
 #    env_file:
 #      - ssl-config.env
     image: user:0.0.1-SNAPSHOT
+    networks:
+      - example-network
     ports:
       - 8020:8020
     volumes:
