--- a/docker-common.yaml
+++ b/docker-common.yaml
@@ -1,5 +1,31 @@
 version: "3.8"
 
+services:
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
+    networks:
+      - example-network
+    ports:
+#      - 80:80
+      - 443:443
+    volumes:
+      - type: bind
+        read_only: true
+        source: ./nginx/conf.d/examples.conf
+        target: /etc/nginx/conf.d/default.conf
+        volume:
+          nocopy: true
+      - keystore-volume:/etc/nginx/ssl
+
+  redis:
+    container_name: redis
+    image: redis:alpine
+    networks:
+      - example-network
+    ports:
+      - 6379:6379
+
 networks:
   example-network:
     name: example-network
