--- a/nginx/conf.d/examples.conf
+++ b/nginx/conf.d/examples.conf
@@ -1,8 +1,14 @@
 server {
-    resolver 127.0.0.1 valid=30s;
+    listen 80;
+    charset utf-8;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    resolver 127.0.0.11 valid=30s;
     resolver_timeout 1s;
 
-    #listen 80;
     listen 443 default ssl;
     charset utf-8;
 
@@ -10,7 +16,8 @@ server {
     ssl_certificate_key ssl/examples-ssl.key;
 
     location / {
-        proxy_pass http://layout:8080/;
+        set $target layout;
+        proxy_pass http://$target:8080;
         #proxy_pass https://host.docker.internal:8080/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-Host $server_name;
@@ -18,36 +25,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /auth/ {
-        proxy_pass http://auth:8080/;
+    location ~ ^/(?<serviceName>(auth|backend|user))/ {
+        rewrite /.*?/(.*) /$1 break;
+        proxy_pass http://$serviceName:8080;
 
         #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-        proxy_redirect / /auth;
+        proxy_redirect / /$serviceName;
 
-        sub_filter 'action="/' 'action="/auth/'; # currently for form submit
-        sub_filter 'href="/' 'href="/auth/';
-        sub_filter_once off;
-    }
-
-    location /backend/ {
-        proxy_pass http://backend:8080/;
-
-        #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-        proxy_redirect / /backend;
-
-        sub_filter 'action="/' 'action="/backend/'; # currently for form submit
-        sub_filter 'href="/' 'href="/backend/';
-        sub_filter_once off;
-    }
-
-    location /user/ {
-        proxy_pass http://user:8080/;
-
-        #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-        proxy_redirect / /user;
-
-        sub_filter 'action="/' 'action="/user/'; # currently for form submit
-        sub_filter 'href="/' 'href="/user/';
+        sub_filter 'action="/' 'action="/$serviceName/'; # currently for form submit
+        sub_filter 'href="/' 'href="/$serviceName/';
         sub_filter_once off;
     }
 }
