--- a/nginx/conf.d/examples.conf
+++ b/nginx/conf.d/examples.conf
@@ -1,49 +1,53 @@
 server {
-	#listen 80;
-	listen 443 default ssl;
-	charset utf-8;
+    resolver 127.0.0.1 valid=30s;
+    resolver_timeout 1s;
 
-	ssl_certificate ssl/examples-ssl.crt;
-	ssl_certificate_key ssl/examples-ssl.key;
+    #listen 80;
+    listen 443 default ssl;
+    charset utf-8;
 
-	location / {
-		proxy_pass https://host.docker.internal:8000/;
-		proxy_set_header Host $host:$server_port;
-		proxy_set_header X-Forwarded-Host $server_name;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	}
+    ssl_certificate ssl/examples-ssl.crt;
+    ssl_certificate_key ssl/examples-ssl.key;
 
-	location /auth/ {
-		proxy_pass https://host.docker.internal:8010/;
+    location / {
+        proxy_pass http://layout:8080/;
+        #proxy_pass https://host.docker.internal:8080/;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
-		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-		proxy_redirect / /auth;
+    location /auth/ {
+        proxy_pass http://auth:8080/;
 
-		sub_filter 'action="/' 'action="/auth/'; # currently for form submit
-		sub_filter 'href="/' 'href="/auth/';
-		sub_filter_once off;
-	}
+        #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+        proxy_redirect / /auth;
 
-	location /backend/ {
-		proxy_pass https://host.docker.internal:8030/;
+        sub_filter 'action="/' 'action="/auth/'; # currently for form submit
+        sub_filter 'href="/' 'href="/auth/';
+        sub_filter_once off;
+    }
 
-		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-		proxy_redirect / /backend;
+    location /backend/ {
+        proxy_pass http://backend:8080/;
 
-		sub_filter 'action="/' 'action="/backend/'; # currently for form submit
-		sub_filter 'href="/' 'href="/backend/';
-		sub_filter_once off;
-	}
+        #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+        proxy_redirect / /backend;
 
-	location /user/ {
-		proxy_pass https://host.docker.internal:8020/;
+        sub_filter 'action="/' 'action="/backend/'; # currently for form submit
+        sub_filter 'href="/' 'href="/backend/';
+        sub_filter_once off;
+    }
 
-		#proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
-		proxy_redirect / /user;
+    location /user/ {
+        proxy_pass http://user:8080/;
 
-		sub_filter 'action="/' 'action="/user/'; # currently for form submit
-		sub_filter 'href="/' 'href="/user/';
-		sub_filter_once off;
-	}
+        #proxy_set_header Accept-Encoding ""; # no compression allowed or next won't work
+        proxy_redirect / /user;
+
+        sub_filter 'action="/' 'action="/user/'; # currently for form submit
+        sub_filter 'href="/' 'href="/user/';
+        sub_filter_once off;
+    }
 }
