--- a/auth/src/main/resources/application.yaml
+++ b/auth/src/main/resources/application.yaml
@@ -13,10 +13,11 @@ server:
   port: 8010
 
 spring:
-  cache.type: redis
   redis:
     host: localhost
     port: 6379
+  session:
+    store-type: redis
 
 trust.store: ${server.ssl.key-store}
 trust.store.password: ${server.ssl.key-store-password}
