--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -9,7 +9,8 @@ server:
   port: 8030
 
 spring:
-  cache.type: redis
   redis:
     host: localhost
     port: 6379
+  session:
+    store-type: redis
