--- a/nginx/conf.d/examples.conf
+++ b/nginx/conf.d/examples.conf
@@ -6,10 +6,12 @@ server {
 }
 
 server {
+	server_name examples.com;
+
     resolver 127.0.0.11 valid=30s;
     resolver_timeout 1s;
 
-    listen 443 default ssl;
+    listen 443 ssl;
     charset utf-8;
 
     ssl_certificate ssl/examples-ssl.crt;
@@ -18,7 +20,6 @@ server {
     location / {
         set $target layout;
         proxy_pass http://$target:8080;
-        #proxy_pass https://host.docker.internal:8080/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
