--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,8 +64,8 @@ services:
     volumes:
       - type: bind
         read_only: true
-        source: ./nginx/conf.d/examples.conf
-        target: /etc/nginx/conf.d/default.conf
+        source: ./nginx/conf.d/
+        target: /etc/nginx/conf.d/
         volume:
           nocopy: true
       - <<: *keystore-volume
