--- a/maven-test/pom.xml
+++ b/maven-test/pom.xml
@@ -8,4 +8,13 @@
     <artifactId>maven-test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
