--- a/maven-test/pom.xml
+++ b/maven-test/pom.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>maven-test</artifactId>
+    <artifactId>maven-test-parent</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+
+    <modules>
+        <module>maven-test</module>
+        <module>maven-common</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -19,9 +24,19 @@
         <repository>
             <id>internal.repo</id>
             <name>Internal repo</name>
-            <url>file:///w:/tmp/01/</url>
+            <url>file://${project.build.outputDirectory}/repository</url>
         </repository>
     </distributionManagement>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>maven-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -29,61 +44,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
             </plugin>
-
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>docker-build</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>docker-push</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <dockerHost>tcp://localhost:2375</dockerHost>
-                    <logDate>default</logDate>
-                    <autoPull>always</autoPull>
-                    <images>
-                        <image>
-                            <name>${project.artifactId}:${project.version}</name>
-                            <build>
-                                <from>openjdk:12-jdk-alpine</from>
-                                <assembly>
-                                    <basedir>/</basedir>
-                                    <inline>
-                                        <dependencySet>
-                                            <outputDirectory>jars</outputDirectory>
-                                        </dependencySet>
-                                        <files>
-                                            <file>
-                                                <source>${project.build.directory}/${project.build.finalName}.jar</source>
-                                                <outputDirectory>jars</outputDirectory>
-                                            </file>
-                                        </files>
-                                    </inline>
-                                </assembly>
-                            </build>
-                        </image>
-                    </images>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <scm>
         <url>https://github.com/Yg0R2/examples.git</url>
         <connection>scm:git:https://github.com/Yg0R2/examples.git</connection>
-        <tag>maven</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
