Restructure Gradle-plugin

--- a/auth/settings.gradle
+++ b/auth/settings.gradle
@@ -1,13 +1,10 @@
-pluginManagement {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-
 rootProject.name = 'auth'
 
-include 'api'
-include 'service'
-include 'web'
+include 'auth-api'
+project(':auth-api').projectDir = file('api')
+
+include 'auth-service'
+project(':auth-service').projectDir = file('service')
+
+include 'auth-web'
+project(':auth-web').projectDir = file('web')
