--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -1,13 +1,10 @@
-pluginManagement {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-
 rootProject.name = 'backend'
 
-include 'api'
-include 'service'
-include 'web'
+include 'backend-api'
+project(':backend-api').projectDir = file('api')
+
+include 'backend-service'
+project(':backend-service').projectDir = file('service')
+
+include 'backend-web'
+project(':backend-web').projectDir = file('web')
