--- a/user/settings.gradle
+++ b/user/settings.gradle
@@ -1,14 +1,13 @@
-pluginManagement {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-
 rootProject.name = 'user'
 
-include 'api'
-include 'dao'
-include 'service'
-include 'web'
+include 'user-api'
+project(':user-api').projectDir = file('api')
+
+include 'user-dao'
+project(':user-dao').projectDir = file('dao')
+
+include 'user-service'
+project(':user-service').projectDir = file('service')
+
+include 'user-web'
+project(':user-web').projectDir = file('web')
