--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,4 +1,12 @@
-plugins {
-    id 'yg0r2.examples.dependency' version '0.0.1-SNAPSHOT'
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath('yg0r2.examples:gradle-plugin:+')
+    }
 }
 
+apply plugin: 'yg0r2.examples.dependency'
