Behemoth - UI missing

--- a/auth/service/build.gradle
+++ b/auth/service/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     // Added because of the user client implementation is here
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    implementation group: 'yg0r2.examples', name: 'user-client', version: '+'
 }
