--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ spring:
     url: jdbc:h2:./build/test;DB_CLOSE_ON_EXIT=FALSE
     username: test
     password: test
+  jpa.hibernate.ddl-auto: create-drop
   redis:
     host: localhost
     port: 6379
