--- a/nginx/conf.d/localhost.conf
+++ b/nginx/conf.d/localhost.conf
@@ -22,16 +22,32 @@ server {
     location / {
 #        proxy_pass http://behemoth:8080;
 #        proxy_pass http://layout:8080;
-        proxy_pass http://host.docker.internal:8080;
+        proxy_pass https://host.docker.internal:8080;
 
         proxy_pass_request_headers on;
     }
 
-    location ~ ^/(?<serviceName>(auth|backend|user))/ {
+    location ~ ^/(?<serviceName>(backend|user))/ {
         rewrite /.*?/(.*) /$1 break;
 #        proxy_pass http://behemoth:8080;
 #        proxy_pass http://$serviceName:8080;
-        proxy_pass http://host.docker.internal:8080;
+        proxy_pass https://host.docker.internal:8080;
+
+        proxy_redirect / /$serviceName;
+
+        proxy_pass_request_headers on;
+
+        sub_filter 'action="/' 'action="/$serviceName/'; # currently for form submit
+        sub_filter 'href="/' 'href="/$serviceName/';
+
+        sub_filter_once off;
+    }
+
+    location ~ ^/(?<serviceName>(auth))/ {
+        rewrite /.*?/(.*) /$1 break;
+#        proxy_pass http://behemoth:8080;
+#        proxy_pass http://$serviceName:8080;
+        proxy_pass https://host.docker.internal:8010;
 
         proxy_redirect / /$serviceName;
 
