--- a/behemoth/web/build.gradle
+++ b/behemoth/web/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    api 'yg0r2.examples:auth-web:+'
-    api 'yg0r2.examples:backend-web:+'
-    api 'yg0r2.examples:layout-web:+'
-    api 'yg0r2.examples:user-web:+'
+//    api 'yg0r2.examples:auth-behemoth:+'
+    api 'yg0r2.examples:backend-behemoth:+'
+    api 'yg0r2.examples:layout-behemoth:+'
+    api 'yg0r2.examples:user-behemoth:+'
 }
