--- a/maven-test/common/pom.xml
+++ b/maven-test/common/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <!-- If parent has <packaging>pom</packaging> and this module is defined in <modules> as a module, this can be removed -->
     <parent>
         <artifactId>maven-test-parent</artifactId>
         <groupId>yg0r2.examples</groupId>
-        <version>0.0.8-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>maven-common</artifactId>
+    <artifactId>maven-test-common</artifactId>
 
 </project>
