--- a/modulit/user/src/main/resources/application.yaml
+++ b/modulit/user/src/main/resources/application.yaml
@@ -9,11 +9,11 @@ server:
   port: 8020
 
 spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:./build/test;DB_CLOSE_ON_EXIT=FALSE
-    username: test
-    password: test
+#  datasource:
+#    driverClassName: org.h2.Driver
+#    url: jdbc:h2:./build/test;DB_CLOSE_ON_EXIT=FALSE
+#    username: test
+#    password: test
   redis:
     host: localhost
     port: 6379
