Open Redis port for outside of the Docker network

--- a/modulit/docker-compose.yaml
+++ b/modulit/docker-compose.yaml
@@ -74,8 +74,8 @@ services:
   redis:
     container_name: redis
     image: redis:alpine
-#    ports:
-#      - 6379:6379
+    ports:
+      - 6379:6379
 
   user:
     container_name: user
