--- a/modulit/layout/ui/package.json
+++ b/modulit/layout/ui/package.json
@@ -20,7 +20,8 @@
     "prepare": "run-s build"
   },
   "dependencies": {
-    "@yg0r2/ui-core": "^1.0.1"
+    "@yg0r2/ui-core": "^1.0.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.11",
