--- a/modulit/auth/src/main/resources/application.yaml
+++ b/modulit/auth/src/main/resources/application.yaml
@@ -2,19 +2,8 @@ client.user:
   baseUrl: https://localhost:8020
   endpoint: ${client.user.baseUrl}/api/user/exists
 
-security.require-ssl: true
+server.port: 8010
 
-server:
-  ssl:
-    enabled: true
-    key-store: classpath:keystore/localhost.p12
-    key-store-password:
-    key-store-type: PKCS12
-  port: 8010
-
-spring:
-  redis:
-    host: localhost
-    port: 6379
-  session:
-    store-type: redis
+spring.profiles.active:
+#  - https
+#  - redis
