--- a/modulit/user/src/main/resources/application.yaml
+++ b/modulit/user/src/main/resources/application.yaml
@@ -1,12 +1,4 @@
-security.require-ssl: true
-
-server:
-  ssl:
-    enabled: true
-    key-store: classpath:keystore/localhost.p12
-    key-store-password:
-    key-store-type: PKCS12
-  port: 8020
+server.port: 8020
 
 spring:
 #  datasource:
@@ -14,8 +6,6 @@ spring:
 #    url: jdbc:h2:./build/test;DB_CLOSE_ON_EXIT=FALSE
 #    username: test
 #    password: test
-  redis:
-    host: localhost
-    port: 6379
-  session:
-    store-type: redis
+  profiles.active:
+#    - https
+#    - redis
