Implement Eureka server and client for automatic registration and discovery (https://spring.io/guides/gs/service-registration-and-discovery/)

--- a/modulit/auth/src/main/resources/application.yaml
+++ b/modulit/auth/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ client.user:
 
 server.port: 8010
 
-spring.profiles.active:
-#  - https
-#  - redis
+spring:
+  application.name: auth
+  profiles.active:
+#    - https
+#    - redis
