Implement custom filter

--- a/modulit/gateway/src/main/resources/application.yaml
+++ b/modulit/gateway/src/main/resources/application.yaml
@@ -11,3 +11,9 @@ spring.cloud.gateway.routes:
       - Path=/auth/**
     filters:
       - RewritePath=/auth(?<segment>/?.*), $\{segment}
+#      - name: Logging
+#        args:
+#          baseMessage: My Custom Message
+#          preLogging: true
+#          postLogging: true
+      - Logging=My Custom Message, true, true
