Implement Gateway and configure services

--- a/modulit/auth/src/main/resources/application.yaml
+++ b/modulit/auth/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 client.user:
-  baseUrl: https://localhost:8020
+  baseUrl: http://user-service.localhost
   endpoint: ${client.user.baseUrl}/api/user/exists
 
 server.port: 8010
