--- a/modulit/docker-compose.yaml
+++ b/modulit/docker-compose.yaml
@@ -62,14 +62,18 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - type: bind
-        read_only: true
-        source: ./nginx/conf.d/
-        target: /etc/nginx/conf.d/
-        volume:
-          nocopy: true
-      - <<: *keystore-volume
-        target: /etc/nginx/ssl
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/conf.d/auth.conf:/etc/nginx/conf.d/auth.conf
+      - ./nginx/conf.d/layout.conf:/etc/nginx/conf.d/layout.conf
+      - ./nginx/conf.d/user.conf:/etc/nginx/conf.d/user.conf
+#      - type: bind
+#        read_only: true
+#        source: ./nginx/conf.d/
+#        target: /etc/nginx/conf.d/
+#        volume:
+#          nocopy: true
+#      - <<: *keystore-volume
+#        target: /etc/nginx/ssl
 
   redis:
     container_name: redis
