--- a/helm/dummy-chart/templates/configmap.yaml
+++ b/helm/dummy-chart/templates/configmap.yaml
@@ -4,8 +4,22 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myValue: "Hello World"
-  drink: {{ quote (upper .Values.favorite.drink) }}
-  food: {{ .Values.favorite.food | upper | quote }}
-  multypleDrinks: {{ quote (repeat 5 (printf "%s, " .Values.favorite.drink)) }}
-  multypleFoods: {{ .Values.favorite.drink | printf "%s, " | repeat 5 | quote }}
-  exercise: {{ .Values.favorite.exercise | default "nope" | quote }}
+  {{- with .Values.favorite }}
+  drink: {{ quote (upper .drink) }}
+  {{- if eq .drink "coffee" -}}
+    {{ "mug: \"true\"" | nindent 2 }}
+  mug-2: "true"
+  {{- end }}
+  food: {{ .food | upper | quote }}
+  multypleDrinks: {{ quote (repeat 5 (printf "%s, " $.Values.favorite.drink)) }}
+  multypleFoods: {{ $.Values.favorite.drink | printf "%s, " | repeat 5 | quote }}
+  exercise: {{ $.Values.favorite.exercise | default "nope" | quote }}
+  {{- end }}
+  toppins: |-
+    {{- range .Values.pizzaToppings }}
+    - {{ . | title | quote }}
+    {{- end }}
+  sizes: |-
+    {{- range tuple "small" "medium" "large"}}
+    - {{ . }}
+    {{- end }}
