--- a/helm/dummy-chart/templates/configmap.yaml
+++ b/helm/dummy-chart/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
+  {{ template "dummy.labels" $ }} # data simply inserted inline, cannot change indentation
 data:
   myValue: "Hello World"
   {{- with .Values.favorite }}
@@ -27,3 +28,4 @@ data:
     {{- range $key, $value := .Values.favorite }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
+{{ include "dummy.app" . | indent 2 }}
