--- a/helm/dummy-chart/templates/configmap.yaml
+++ b/helm/dummy-chart/templates/configmap.yaml
@@ -46,4 +46,5 @@ data:
   readByLines:
     {{- range .Files.Lines "foo/bar.txt" }}
     {{ . }}
-    {{ end }}
+    {{- end }}
+  salad: {{ .Values.global.salad }}
