--- a/helm/tentacle/templates/_configMap.yaml
+++ b/helm/tentacle/templates/_configMap.yaml
@@ -1,5 +1,4 @@
 {{- define "tentacle.configMap" }}
-{{- $appFullName := include "tentacle.appFullname" . -}}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -14,9 +13,7 @@ data:
   APP_CONFIG_FILES: "/app/config/env.yaml"
   env.yaml: |-
     {{- if kindIs "map" .Values.configMap.envFile -}}
-      {{- range $key, $value := .Values.configMap.envFile }}
-        {{- $key | nindent 4 }}: {{ $value }}
-      {{- end -}}
+      {{- toYaml .Values.configMap.envFile | nindent 4 }}
     {{- else -}}
       {{- .Values.configMap.envFile | nindent 4 }}
     {{- end -}}
